<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@drawable/background_register">


    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custombutton"
        android:drawableStart="@drawable/email_icon"
        android:hint="@string/hint_email"
        android:textColor="#FFFBF6"
        android:textColorHint="#FFFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />
    <EditText
        android:id="@+id/edtCFPass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custombutton"
        android:drawableStart="@drawable/password_icon"
        android:hint="@string/hint_confirmpass"
        android:inputType="numberPassword"
        android:textColor="#FFFBF6"
        android:textColorHint="#FFFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPass"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custombutton"
        android:drawableStart="@drawable/password_icon"
        android:hint="@string/hint_pass"
        android:inputType="numberPassword"
        android:textColor="#FFFBF6"
        android:textColorHint="#FFFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custombutton"
        android:drawableStart="@drawable/user_icon"
        android:hint="@string/hint_uname"
        android:textColor="#FFFBF6"
        android:textColorHint="#FFFBF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custombutton"
        android:drawableStart="@drawable/icon_calendar"
        android:drawableLeft="@drawable/icon_calendar"
        android:onClick="openDatePicker"
        android:text="JAN 01 2020"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="60dp"
        android:text="CREATE ACCOUNT"
        android:textColor="@color/teal_200"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/custombutton2"
        android:text="@string/btnCreate"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCFPass"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnCancelAC"
        android:layout_width="103dp"
        android:layout_height="43dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custombutton2"
        android:text="@string/btnCancel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCFPass" />
</androidx.constraintlayout.widget.ConstraintLayout>